<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="resfreshapp.refresh.MealFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="57dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bean_salad"
                app:cardElevation="5dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:elevation="5dp"
                        android:src="@drawable/bean_salad" />

                    <Button
                        android:id="@+id/food1_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="19dp"
                        android:background="@android:color/transparent"
                        android:text="@string/meal1"
                        android:textSize="@dimen/class_text_size" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:elevation="5dp"
                        android:src="@drawable/chicken_salad" />

                    <Button
                        android:id="@+id/food2_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="19dp"
                        android:background="@android:color/transparent"
                        android:text="@string/meal2"
                        android:textSize="@dimen/class_text_size" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:elevation="5dp"
                        android:src="@drawable/shrimp_rice" />

                    <Button
                        android:id="@+id/food3_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="19dp"
                        android:background="@android:color/transparent"
                        android:text="@string/meal3"
                        android:textSize="@dimen/class_text_size" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

        </LinearLayout>


    </ScrollView>
</FrameLayout>
